--- a/roxy-style.css
+++ b/roxy-style.css
@@ -25,8 +25,9 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 400px;
   width: 40%;
+  height: auto;
+  min-height: 0%;
   padding: 20px;
 }
 nav a {
